--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "my-expense-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "8.15.0",
+    "node": "16.17.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -26,12 +30,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
